manifests/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  annotations:
    ignore-check.kube-linter.io/no-rolling-update-strategy: "Using Recreate strategy to avoid issues with ReadWriteOnce volumes"
    ignore-check.kube-linter.io/no-read-only-root-fs: "Flaresolverr Chrome doesn't work without it"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      restartPolicy: Always
      containers:
        - name: prowlarr
          image: ghcr.io/home-operations/prowlarr:2.6.3@sha256:8c9ee448bb6de0e3e8b9c2f536b7a3455ec6ff5e184c2fb2a8602791b2757442
          ports:
            - containerPort: 9696
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            tcpSocket:
              port: 9696
          readinessProbe:
            tcpSocket:
              port: 9696
        - name: flaresolverr
          image: flaresolverr/flaresolverr:v3.5.0@sha256:139dfee1c6f89249c8d665d1333a42e8ec74ec0a86bc6bb1c8461e10d3a66a47
          ports:
            - containerPort: 8191
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
          livenessProbe:
            tcpSocket:
              port: 8191
          readinessProbe:
            tcpSocket:
              port: 8191
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: tmp
          emptyDir: {}
