manifests/media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.cluster.nelsondane.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
